# mammon

./: .clang-format  .clang-tidy  .cppcheck-suppressions.txt  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml  ci.yml
assets/: design.md  header.txt
beacon-chain/: attestation.cpp  attestation.hpp  beacon_block.cpp  beacon_block.hpp  beacon_state.cpp  beacon_state.hpp  deposits.hpp  eth1data.hpp  helpers.hpp  main.cpp  types.hpp  validator.cpp  validator.hpp
beacon-chain/test/: test_ssz.cpp
bench/: bench_sha256.cpp.in  bench_sha256_impl.cpp  bench_sha256_impl.hpp
common/: basic_types.hpp  bitlist.cpp  bitlist.hpp  bitvector.hpp  boolean.hpp  bytes.hpp  bytes_test.cpp  containers.hpp  slot.hpp  types.hpp
config/: constants.hpp  mainnet.hpp  mainnet.hpp.in  minimal.hpp  minimal.hpp.in  shared.hpp
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/Attestation/ssz_random/case_1/: value.yaml
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/AttestationData/ssz_random/case_1/: roots.yaml
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/AttesterSlashing/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/BeaconBlock/ssz_random/case_1/: roots.yaml
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/BeaconBlockBody/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/BeaconBlockHeader/ssz_random/case_1/: roots.yaml
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/BeaconState/ssz_random/case_1/: roots.yaml
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/Checkpoint/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/Deposit/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/DepositData/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/DepositMessage/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/Eth1Data/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/Fork/ssz_random/case_1/: roots.yaml
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/ForkData/ssz_random/case_1/: roots.yaml
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/PendingAttestation/ssz_random/case_1/: value.yaml
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/SignedBeaconBlock/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/SignedBeaconBlockHeader/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/SignedVoluntaryExit/ssz_random/case_1/: roots.yaml
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/SigningData/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/Validator/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/mainnet/phase0/ssz_static/VoluntaryExit/ssz_random/case_1/: roots.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/Attestation/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/AttestationData/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/AttesterSlashing/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/BeaconBlock/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/BeaconBlockBody/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/BeaconBlockHeader/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/BeaconState/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/Checkpoint/ssz_random/case_0/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/Deposit/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/DepositData/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/DepositMessage/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/Eth1Data/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/Fork/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/ForkData/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/IndexedAttestation/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/PendingAttestation/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/ProposerSlashing/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/SignedBeaconBlock/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/SignedBeaconBlockHeader/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/SignedVoluntaryExit/ssz_random/case_1/: roots.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/SigningData/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/Validator/ssz_random/case_1/: roots.yaml  value.yaml
eth2.0-spec-tests/tests/minimal/phase0/ssz_static/VoluntaryExit/ssz_random/case_1/: roots.yaml
helpers/: bytes_to_int.hpp  math.hpp
include/: acutest.h
ssz/: hasher.cpp  hasher.hpp  hashtree.cpp  hashtree.hpp  sha256.asm  sha256_avx.asm  sha256_avx2.asm  sha256_avx_one_block.asm  sha256_intrinsic.cpp  ssz.hpp  ssz_container.cpp  ssz_container.hpp  test_sha256.cpp  transpose_avx2.asm
